--- a/package.json
+++ b/package.json
@@ -47,10 +47,11 @@
       "last 1 safari version"
     ]
   },
+  "proxy": "http://158.180.68.123",
   "devDependencies": {
     "@types/styled-components": "^5.1.34",
     "autoprefixer": "^10.4.21",
     "postcss": "^8.5.6",
-    "tailwindcss": "^4.1.11"
+    "tailwindcss": "3.0"
   }
 }
